<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/tittle_app_login"
            android:textColor="@color/tittle_login"
            android:textSize="32sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="left"
            android:text="@string/subtittle_app_login"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/google"
                app:cornerRadius="14dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/buttom_color"

                app:icon="@drawable/google"
                app:iconSize="24dp"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconTint="@null"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/facebook"
                app:cornerRadius="14dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/buttom_color"

                app:icon="@drawable/facebook"
                app:iconSize="24dp"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconTint="@null"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="18dp"
            android:text="@string/username"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="18dp"
            android:text="@string/password"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:text="@string/password_forget"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:drawableLeft="@drawable/login"
            android:text="@string/log_in_buttom_text"
            style="@style/ButtomStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:text="@string/signing_text"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>